Update index.html ver. r2.2.1

--- a/dnevnik/index.html
+++ b/dnevnik/index.html
@@ -308,11 +308,11 @@
     <div class="countdown-container">
         <div id="upcoming-event" class="info"></div>
         <button class="menu-button" onclick="openMenu()">Открыть меню столовой</button>
-        <button class="countdown-button" onclick="showCountdown()">Узнать, сколько дней до последнего звонка</button>
+        <button class="countdown-button" onclick="showCountdown()">Узнать, сколько дней до... (не работает)</button>
         <button class="task-manager-button" onclick="openTaskManager()">Task Manager</button>
         <div id="countdown-result" class="countdown-result"></div>
         <div class="footer">
-            by Makrivich 2025<br>ver. r2.1.1
+            by Makrivich 2025<br>ver. r2.2.1
         </div>
     </div>
 
@@ -625,7 +625,7 @@
             } else if (daysDifference === 0) {
                 countdownElement.innerHTML = `Сегодня последний звонок!`;
             } else {
-                countdownElement.innerHTML = `Последний звонок уже прошел!`;
+                countdownElement.innerHTML = `Функция не работает`;
             }
         }
 
