--- a/dnevnik/10a.html
+++ b/dnevnik/10a.html
@@ -318,7 +318,7 @@
 
     <script>
         // URL для основного расписания
-        const MAIN_SHEET_URL = 'https://docs.google.com/spreadsheets/d/1XRQTsELDzrNfuiF5YhXHdzginnTiFP9CSyEPJfMrseI/edit?usp=sharing';
+        const MAIN_SHEET_URL = 'https://docs.google.com/spreadsheets/d/1XRQTsELDzrNfuiF5YhXHdzginnTiFP9CSyEPJfMrseI/export?format=csv&gid=0';
 
         // Расписание звонков
         const SCHEDULE_WEEKDAYS = {
@@ -764,3 +764,4 @@
 </body>
 
 </html>
+
